--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,18 @@
 /*
+
+ */
+
+.alert {
+    padding: 10px;
+}
+
+.alert-success {
+    color: rgb(97,129,36);
+    border-color: rgb(222,238,194);
+    background-color: rgb(222,238,194);
+}
+
+/*
 ============================
 SEARCH
 ============================
@@ -494,7 +508,8 @@ DESIGN
 }
 
 .product > .image-container:hover {
-    box-shadow: 0 0 3px rgb(79,79,79);
+    border: 1px solid rgb(231,231,231);
+    box-shadow: 0 1px 3px rgba(231,231,231, 0.5);
     -webkit-transform: scale(1.4);
     -moz-transform: scale(1.4);
     -ms-transform: scale(1.4);
@@ -737,6 +752,7 @@ PAGINATION
 .pagination > li > a,
 .pagination > li > span {
     margin-left: 10px;
-    padding: 5px 8px;
+    padding: 4px 8px;
     font-size: 11px;
+    color: rgb(124,124,124);
 }
