--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -205,8 +205,26 @@ HEADER
     background-color: white;
 }
 
+.breadcrumb > li+li {
+    padding-left: 10px;
+}
+
 .breadcrumb > li+li:before {
-    content: ">"
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    font-size: 70%;
+    height: 12px;
+    padding-right: 18px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: "\e080";
+    vertical-align: middle;
+    color: #3e3e3e;
 }
 
 .breadcrumb > li > a {
@@ -220,7 +238,7 @@ HEADER
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
-    color: rgb(62,62,62);
+    color: #3e3e3e;
 }
 
 .page-nav h1 {
@@ -236,7 +254,6 @@ HEADER
 .main-header .search-input {
     background: url(../images/img-02.png) 95% center no-repeat;
     padding-right: 24px;
-    height: 34px;
 }
 
 /*
